# gopjrt

./: .gitignore  .sccignore  README.md  chelper.go  clients.go  clients_test.go  common.c  common.go  common.h  devices.go  devices_test.go  dynamiclib.go  dynamiclib_dlopen.go  dynamiclib_test.go  error.go  gen_api_calls.h  gen_c_enums.go  gen_new_struct.c  gen_new_struct.h  go.mod  go.sum  gopjrt_cpu_dynamic_test.go  gopjrt_cpu_static_test.go  gopjrt_test.go  namedvalues.go  plugins.go
c/: .gitignore  BUILD  MODULE.bazel  WORKSPACE  bazel.sh  cgo_setup.sh  custom_darwin_arm64.bazelrc  darwin_amd64_bazelrc  gomlx.bazelrc  gomlx_xlabuilder.bzl  openxla_xla_bazelrc  openxla_xla_bazelrc.version  xla_configure.amazonlinux_amd64.bazelrc  xla_configure.bazelrc  xla_configure.darwin_amd64.bazelrc  xla_configure.darwin_arm64.bazelrc  xla_configure.linux.bazelrc  xla_configure.linux_amd64.bazelrc
c/gomlx/pjrt/: BUILD
c/gomlx/xlabuilder/: BUILD  gen_node_types.h  gen_op_types.h  literal.cpp  literal.h  node.h  op.h  shape.cpp  shape.h  stablehlo.cpp  utils.cpp  utils.h  xlabuilder.cpp  xlabuilder.h
cbuffer/: cbuffer.go
cmd/: install.sh  install_cuda.sh  install_cuda13.sh  install_darwin.sh  install_darwin_amd64.sh  install_darwin_arm64.sh  install_linux.sh  install_linux_amd64.sh  install_linux_amd64_amazonlinux.sh  protoc_xla_protos.sh  run_coverage.sh
docker/: Dockerfile.amazonlinux  README.md
docs/: CHANGELOG.md  coverage.out  devel.md
dtypes/: dtype_enumer.go  dtype_string.go  dtypes.go  dtypes_test.go  gen_dtype_enum.go
examples/: .gitignore  mandelbrot.go  (+1 more)
(+207 files in other folders)
