###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "gopjrt",  # Choose a name for your workspace module
    version = "0.7.4",  # Assign a version to your module
)

bazel_dep(name = "rules_pkg", version = "1.0.1")  # Use the latest version
